Added grpc-rest service with swagger page

--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,22 @@
     <properties>
         <java.version>17</java.version>
         <grpc-spring-boot-starter.version>5.0.0</grpc-spring-boot-starter.version>
+        <springfox-boot-starter.version>${springfox-swagger-ui.version}</springfox-boot-starter.version>
+        <springfox-swagger-ui.version>3.0.0</springfox-swagger-ui.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>${springfox-boot-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox-swagger-ui.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
@@ -30,7 +43,7 @@
             </dependency>
             <dependency>
                 <groupId>rbdiang.resolve</groupId>
-                <artifactId>rbdiang-resolve-client</artifactId>
+                <artifactId>rbdiang-resolve-grpc-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -79,6 +92,7 @@
 
     <modules>
         <module>rbdiang-resolve-grpc-client</module>
+        <module>rbdiang-resolve-grpc-rest</module>
         <module>rbdiang-resolve-common</module>
         <module>rbdiang-resolve-grpc-cache</module>
         <module>rbdiang-resolve-grpc-hazelcast</module>
