--- a/rbdiang-resolve-grpc-rest/pom.xml
+++ b/rbdiang-resolve-grpc-rest/pom.xml
@@ -30,7 +30,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.github.lognet</groupId>
+            <groupId>net.devh</groupId>
             <artifactId>grpc-client-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
