--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,32 @@
     <packaging>pom</packaging>
     <properties>
         <java.version>17</java.version>
-        <grpc-spring-boot-starter.version>5.0.0</grpc-spring-boot-starter.version>
         <springfox-boot-starter.version>${springfox-swagger-ui.version}</springfox-boot-starter.version>
         <springfox-swagger-ui.version>3.0.0</springfox-swagger-ui.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <grpc-spring-boot-starter.version>2.14.0.RELEASE</grpc-spring-boot-starter.version>
+        <grpc.version>1.54.0</grpc.version>
+        <hazelcast.version>5.2.3</hazelcast.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-bom</artifactId>
+                <version>${grpc.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-server-spring-boot-starter</artifactId>
+                <version>${grpc-spring-boot-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-client-spring-boot-starter</artifactId>
+                <version>${grpc-spring-boot-starter.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
@@ -53,11 +72,6 @@
             </dependency>
             <dependency>
                 <groupId>rbdiang.resolve</groupId>
-                <artifactId>rbdiang-resolve-hazelcast</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>rbdiang.resolve</groupId>
                 <artifactId>rbdiang-resolve-grpc-cache</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -65,21 +79,6 @@
                 <groupId>rbdiang.resolve</groupId>
                 <artifactId>rbdiang-resolve-gprc-hazelcast</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.github.lognet</groupId>
-                <artifactId>grpc-cliet-spring-boot-starter</artifactId>
-                <version>${grpc-spring-boot-starter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.github.lognet</groupId>
-                <artifactId>grpc-spring-boot-starter</artifactId>
-                <version>${grpc-spring-boot-starter.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.github.lognet</groupId>
-                <artifactId>grpc-client-spring-boot-starter</artifactId>
-                <version>${grpc-spring-boot-starter.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -95,8 +94,7 @@
         <module>rbdiang-resolve-grpc-rest</module>
         <module>rbdiang-resolve-common</module>
         <module>rbdiang-resolve-grpc-cache</module>
-        <module>rbdiang-resolve-grpc-hazelcast</module>
         <module>rbdiang-resolve-backend</module>
-        <module>rbdiang-resolve-hazelcast</module>
+        <module>rbdiang-resolve-grpc-hazelcast-server</module>
     </modules>
 </project>
