--- a/rbdiang-resolve-grpc-cache/pom.xml
+++ b/rbdiang-resolve-grpc-cache/pom.xml
@@ -10,8 +10,8 @@
     <artifactId>rbdiang-resolve-grpc-cache</artifactId>
     <dependencies>
         <dependency>
-            <groupId>io.github.lognet</groupId>
-            <artifactId>grpc-spring-boot-starter</artifactId>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>rbdiang.resolve</groupId>
