--- a/rbdiang-resolve-grpc-client/pom.xml
+++ b/rbdiang-resolve-grpc-client/pom.xml
@@ -19,7 +19,7 @@
             <version>${javax.annotation-api.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.lognet</groupId>
+            <groupId>net.devh</groupId>
             <artifactId>grpc-client-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
