Add proto linter and common_types.proto

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
         <grpc-spring-boot-starter.version>2.14.0.RELEASE</grpc-spring-boot-starter.version>
         <grpc.version>1.54.0</grpc.version>
         <hazelcast.version>5.2.3</hazelcast.version>
+        <annotations-api.version>6.0.53</annotations-api.version>
+        <os-maven-plugin.version>1.6.1</os-maven-plugin.version>
+        <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
+        <proto-lint-maven-plugin.version>1.0.2</proto-lint-maven-plugin.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -80,12 +84,55 @@
                 <artifactId>rbdiang-resolve-gprc-hazelcast</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency> <!-- necessary for Java 9+ -->
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>annotations-api</artifactId>
+                <version>${annotations-api.version}</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <build>
         <pluginManagement>
-
+            <plugins>
+                <plugin>
+                    <groupId>org.xolstice.maven.plugins</groupId>
+                    <artifactId>protobuf-maven-plugin</artifactId>
+                    <version>${protobuf-maven-plugin.version}</version>
+                    <configuration>
+                        <protocArtifact>com.google.protobuf:protoc:3.3.0:exe:${os.detected.classifier}</protocArtifact>
+                        <pluginId>grpc-java</pluginId>
+                        <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.4.0:exe:${os.detected.classifier}
+                        </pluginArtifact>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>maven-proto-compile</id>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>compile-custom</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>io.github.dimitrovvlado</groupId>
+                    <artifactId>proto-lint-maven-plugin</artifactId>
+                    <version>${proto-lint-maven-plugin.version}</version>
+                    <configuration>
+                        <protoDirectory>src/main/proto</protoDirectory>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>maven-proto-linter</id>
+                            <goals>
+                                <goal>lint</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
         </pluginManagement>
     </build>
 
